{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 149,
  "lineage": "03e26717-90bd-2810-17fc-1cdae6f2e91e",
  "resources": [
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:internet-gateway/igw-01f85f494fa086648",
            "id": "igw-01f85f494fa086648",
            "owner_id": "971422687659",
            "tags": {
              "Name": "igw-01"
            },
            "tags_all": {
              "Name": "igw-01"
            },
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01f85f494fa086648",
            "id": "r-rtb-02584e20089727e1a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02584e20089727e1a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:route-table/rtb-02584e20089727e1a",
            "id": "rtb-02584e20089727e1a",
            "owner_id": "971422687659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f85f494fa086648",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1-euwest1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d93c98c281c4aa50",
            "route_table_id": "rtb-02584e20089727e1a",
            "subnet_id": "subnet-0fc5be2b5c992e900"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet2-euwest1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0866f3dbcd504e7a2",
            "route_table_id": "rtb-02584e20089727e1a",
            "subnet_id": "subnet-07155ea73ae4fe372"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:security-group/sg-0f094509b74d4b142",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f094509b74d4b142",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "971422687659",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "global_accelerator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:security-group/sg-01647a439867040a2",
            "description": "GlobalAccelerator configured SecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01647a439867040a2",
            "ingress": [],
            "name": "GlobalAccelerator",
            "name_prefix": "",
            "owner_id": "971422687659",
            "revoke_rules_on_delete": null,
            "tags": {
              "AWSServiceName": "GlobalAccelerator"
            },
            "tags_all": {
              "AWSServiceName": "GlobalAccelerator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oj_ecs_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:security-group/sg-0c36a11696da59d1c",
            "description": "OJECSSecurityGroupLB-genai",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c36a11696da59d1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Free Ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "OJECSSecurityGroupLB-genai",
            "name_prefix": "",
            "owner_id": "971422687659",
            "revoke_rules_on_delete": null,
            "tags": {
              "OJ": "OJ",
              "STAGE": "genai"
            },
            "tags_all": {
              "OJ": "OJ",
              "STAGE": "genai"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oj_ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:security-group/sg-0696b11cf33591870",
            "description": "OJECSSecurityGroup-genai",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0696b11cf33591870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Free Ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "OJECSSecurityGroup-genai",
            "name_prefix": "",
            "owner_id": "971422687659",
            "revoke_rules_on_delete": null,
            "tags": {
              "OJ": "OJ",
              "STAGE": "genai"
            },
            "tags_all": {
              "OJ": "OJ",
              "STAGE": "genai"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1-euwest1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:subnet/subnet-0fc5be2b5c992e900",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc5be2b5c992e900",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422687659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1-euwest1"
            },
            "tags_all": {
              "Name": "subnet1-euwest1"
            },
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet2-euwest1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:subnet/subnet-07155ea73ae4fe372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07155ea73ae4fe372",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422687659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2-euwest1"
            },
            "tags_all": {
              "Name": "subnet2-euwest1"
            },
            "vpc_id": "vpc-0bb8a69ff2508b49d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:971422687659:vpc/vpc-0bb8a69ff2508b49d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0caea3b69880a24ba",
            "default_route_table_id": "rtb-02584e20089727e1a",
            "default_security_group_id": "sg-0f094509b74d4b142",
            "dhcp_options_id": "dopt-0575ec61811ee1bd3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb8a69ff2508b49d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02584e20089727e1a",
            "owner_id": "971422687659"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}